--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -56,6 +56,12 @@ a {
     text-decoration: none;
 }
 
+p {
+    margin:0;
+    font-size:1.5rem;
+    line-height:1.5;
+}
+
 nav {
     background-color: #fff;
     position: absolute;
@@ -163,7 +169,13 @@ nav {
         order: 1;
     }
     .jumbotron.white {
-        background-color: #fff;
+        background-color: #F2F5F5;
+    }
+    .jumbotron.white .content-media .section-header {
+        padding-top:32px;
+    }
+    .jumbotron.white .content-media .section-header .section-title {
+        padding-bottom:2rem;
     }
     .section-header {
         padding-bottom: 32px;
@@ -178,7 +190,8 @@ nav {
 }
 
 
-.section-header h2.section-subtitle {
+.section-header h2.section-subtitle,
+h2{
     text-align: left;
     font-size: 2rem;
     line-height: 1.5;
@@ -206,7 +219,7 @@ figure.figure-image {
 
 figure .section-image {
     text-align: center;
-    display: block;
+    display: inline-flex;
     /*margin: 0 auto;*/
     max-width: 100%;
     justify-content: center;
@@ -219,6 +232,61 @@ figure .section-image {
         /*max-height: 350px;*/
         width:100%;
     }
+.content-text.cards {
+    border-left: 2px solid #D7D7D7;
+    padding-right:unset;
+    width: 423px;
+    justify-content: flex-start;
+    padding:0;
+}
+.cards .card {
+    display: flex;
+    flex-direction: row;
+    padding:16px;
+    align-items:flex-start;
+}
+.card #card1.card-image {
+    background-image: url(../images/information-orientation.jpg);
+}
+.card #card2.card-image {
+    background-image: url(../images/information-campus-mobile.jpg);
+}
+.card #card3.card-image {
+    background-image: url(../images/information-guest-lecture.jpg);
+}
+.card .card-image {
+    width: 35%;
+    margin: 0;
+    height: 200px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+.card .card-image img {
+    width: 100%;
+    height: 100%;
+    max-height: 185px;
+    overflow: hidden;
+}
+.card .card-info {
+    padding: 16px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    
+}
+.card .card-info h2 {
+    margin: 0;
+}
+.card.selected {
+    background-color: #d7d7d7;
+}
+.card .card-info a.read-more {
+    color: #4C93DE;
+    margin-top: 8px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 
 @media only screen and (max-width: 599px) {
     nav.main {
@@ -242,6 +310,9 @@ figure .section-image {
         padding-top:32px;
         padding-right:16px;
     }
+    .jumbotron.white .content-media {
+        display:none;
+    }
     figure .section-image img {
         width:auto;
         height: 100%;
@@ -257,5 +328,18 @@ figure .section-image {
     }
     .section-header button {
         background-color: #9A9A9A;
+    }
+    .content-text.cards {
+        width:100%;
+        padding:0;
+    }
+    .cards .card {
+        flex-direction:column;
+    }
+    .cards .card .card-image {
+        width:100%;
+    }
+    .card .card-info {
+        padding: 32px 16px;
     }
 }
