--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -6,6 +6,7 @@
     src: local('Raleway Light'), local('Raleway-Light'), url(https://fonts.gstatic.com/s/raleway/v11/-_Ctzj9b56b8RgXW8FArifk_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
+
 @font-face {
     font-family: 'Raleway';
     font-style: normal;
@@ -13,6 +14,7 @@
     src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v11/0dTEPzkLWceF7z0koJaX1A.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
+
 @font-face {
     font-family: 'Raleway';
     font-style: normal;
@@ -20,6 +22,7 @@
     src: local('Raleway Bold'), local('Raleway-Bold'), url(https://fonts.gstatic.com/s/raleway/v11/JbtMzqLaYbbbCL9X6EvaI_k_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
+
 @font-face {
     font-family: 'Raleway';
     font-style: normal;
@@ -27,6 +30,7 @@
     src: local('Raleway Black'), local('Raleway-Black'), url(https://fonts.gstatic.com/s/raleway/v11/PKCRbVvRfd5n7BTjtGiFZPk_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
+
 @font-face {
     font-family: 'Raleway';
     font-style: italic;
@@ -34,6 +38,7 @@
     src: local('Raleway Italic'), local('Raleway-Italic'), url(https://fonts.gstatic.com/s/raleway/v11/7dO2Hj7qB8nRVFK0svQqRhJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
+
 @font-face {
     font-family: 'Raleway';
     font-style: italic;
@@ -57,9 +62,9 @@ a {
 }
 
 p {
-    margin:0;
-    font-size:1.5rem;
-    line-height:1.5;
+    margin: 0;
+    font-size: 1.5rem;
+    line-height: 1.5;
 }
 
 nav {
@@ -103,8 +108,8 @@ nav {
 
     nav .links {
         padding-right: 24px;
-        display:flex;
-        flex-flow:row nowrap;
+        display: flex;
+        flex-flow: row nowrap;
     }
 
         nav .links a {
@@ -116,17 +121,19 @@ nav {
             nav .links a:last-child {
                 margin-right: 0;
             }
+
     nav.mobile {
         display: none;
         height: 64px;
-      
     }
-    nav.mobile .logo-image{
-        padding-left: 24px;
-    }
-    nav.mobile .icon:last-child{
-        padding-right: 24px;
-    }
+
+        nav.mobile .logo-image {
+            padding-left: 24px;
+        }
+
+        nav.mobile .icon:last-child {
+            padding-right: 24px;
+        }
 
 .container {
     top: 64px;
@@ -146,7 +153,6 @@ nav {
     align-items: stretch;
     flex: 1;
     min-height: 100vh;
-
 }
 
     .jumbotron .content-text {
@@ -156,7 +162,7 @@ nav {
         justify-content: center;
         display: flex;
         flex-direction: column;
-        padding-right:10%;
+        padding-right: 10%;
     }
 
     .jumbotron .content-media {
@@ -168,53 +174,59 @@ nav {
         justify-content: space-around;
         order: 1;
     }
+
     .jumbotron.white {
         background-color: #F2F5F5;
     }
-    .jumbotron.white .content-media .section-header {
-        padding-top:32px;
-    }
-    .jumbotron.white .content-media .section-header .section-title {
-        padding-bottom:2rem;
-    }
-    .section-header {
-        padding-bottom: 32px;
-    }
-.section-header .section-title {
-    text-align: left;
-    font-weight: 900;
-    font-size: 3.5rem;
-    padding-bottom: 1rem;
-    margin: 0;
-    color: #4C4C4C;
+
+        .jumbotron.white .content-media .section-header {
+            padding-top: 32px;
+        }
+
+            .jumbotron.white .content-media .section-header .section-title {
+                padding-bottom: 2rem;
+            }
+
+.section-header {
+    padding-bottom: 32px;
 }
 
+    .section-header .section-title {
+        text-align: left;
+        font-weight: 900;
+        font-size: 3.5rem;
+        padding-bottom: 1rem;
+        margin: 0;
+        color: #4C4C4C;
+    }
 
-.section-header h2.section-subtitle,
-h2{
-    text-align: left;
-    font-size: 2rem;
-    line-height: 1.5;
-    font-weight: bold;
-    color: #4C4C4C;
-}
-.section-header button {
-    padding: 8px;
-    width: 100%;
-    background-color: #4C4C4C;
-    color: #fff;
-    border: none;
-    font-size: 1.5rem;
-    line-height: 2;
-}
+
+    .section-header h2.section-subtitle,
+    h2 {
+        text-align: left;
+        font-size: 2rem;
+        line-height: 1.5;
+        font-weight: bold;
+        color: #4C4C4C;
+    }
+
+    .section-header button {
+        padding: 8px;
+        width: 100%;
+        background-color: #4C4C4C;
+        color: #fff;
+        border: none;
+        font-size: 1.5rem;
+        line-height: 2;
+    }
 
 figure.figure-image {
     display: flex;
     justify-content: flex-start;
-    flex:1;
+    flex: 1;
     min-height: 150px;
     flex-flow: row wrap;
-    margin:0;
+    margin: 0;
 }
 
 figure .section-image {
@@ -230,30 +242,36 @@ figure .section-image {
     figure .section-image img {
         max-width: 100%;
         /*max-height: 350px;*/
-        width:100%;
+        width: 100%;
     }
+
 .content-text.cards {
     border-left: 2px solid #D7D7D7;
-    padding-right:unset;
+    padding-right: unset;
     width: 423px;
     justify-content: flex-start;
-    padding:0;
+    padding: 0;
 }
+
 .cards .card {
     display: flex;
     flex-direction: row;
-    padding:16px;
-    align-items:flex-start;
+    padding: 16px;
+    align-items: flex-start;
 }
+
 .card #card1.card-image {
     background-image: url(../images/information-orientation.jpg);
 }
+
 .card #card2.card-image {
     background-image: url(../images/information-campus-mobile.jpg);
 }
+
 .card #card3.card-image {
     background-image: url(../images/information-guest-lecture.jpg);
 }
+
 .card .card-image {
     width: 35%;
     margin: 0;
@@ -262,25 +280,29 @@ figure .section-image {
     background-size: cover;
     position: relative;
 }
-.card .card-image img {
-    width: 100%;
-    height: 100%;
-    max-height: 185px;
-    overflow: hidden;
-}
+
+    .card .card-image img {
+        width: 100%;
+        height: 100%;
+        max-height: 185px;
+        overflow: hidden;
+    }
+
 .card .card-info {
     padding: 16px;
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
-    
 }
-.card .card-info h2 {
-    margin: 0;
-}
+
+    .card .card-info h2 {
+        margin: 0;
+    }
+
 .card.selected {
     background-color: #d7d7d7;
 }
+
 .card .card-info a.read-more {
     color: #4C93DE;
     margin-top: 8px;
@@ -288,58 +310,161 @@ figure .section-image {
     font-weight: bold;
 }
 
+.landing-page {
+    display: block;
+    text-align: center;
+    width: 100%;
+}
+
+    .landing-page .section-title {
+        padding: 32px 0;
+        text-align: center;
+    }
+
+    .landing-page .section-header {
+        padding: 0;
+    }
+
+    .landing-page .landing-wrap {
+        max-width: 1200px;
+        margin: 0 auto 1rem;
+        display: flex;
+        flex-flow: wrap row;
+    }
+
+.one-third {
+    display: flex;
+    flex-direction: column;
+    margin: 16px;
+    background-color: #fff;
+    flex: 1 1 30%;
+}
+
+    .one-third .feature-info {
+        flex-direction: column;
+        display: flex;
+        padding: 16px;
+        margin-bottom: 8px;
+    }
+
+        .one-third .feature-info h2 {
+            color: #515151;
+        }
+
+        .one-third .feature-info p {
+            text-align: left;
+            color: #7C7C7C;
+        }
+
+        .one-third .feature-info h3 {
+            text-transform: uppercase;
+            text-align: left;
+            color: #7C7C7C;
+            line-height: 2;
+            font-weight: 400;
+            font-size: 1.5rem;
+        }
+
+    .one-third figure img {
+        box-sizing: border-box;
+        display: flex;
+        -webkit-box-flex: 0;
+        -webkit-flex: 0 0 auto;
+        flex: 0 0 auto;
+        width: 100%;
+        height: auto;
+    }
+
+figure.feature-image {
+    margin: 0;
+}
+
 @media only screen and (max-width: 599px) {
     nav.main {
-        display:none;
+        display: none;
     }
+
     nav.mobile {
-        display:inline-flex;
-        justify-content:space-between;
-        align-content:center;
-
+        display: inline-flex;
+        justify-content: space-between;
+        align-content: center;
     }
+
     .jumbotron {
-        flex-direction:column;
-
+        flex-direction: column;
     }
+
         .jumbotron .content-media {
             height: 180px;
             background-color: #9A9A9A;
         }
-    .jumbotron .content-text {
-        padding-top:32px;
-        padding-right:16px;
-    }
-    .jumbotron.white .content-media {
-        display:none;
-    }
+
+        .jumbotron .content-text {
+            padding-top: 32px;
+            padding-right: 16px;
+        }
+
+        .jumbotron.white .content-media {
+            display: none;
+        }
+
     figure .section-image img {
-        width:auto;
+        width: auto;
         height: 100%;
     }
+
     .section-header .section-title {
         font-size: 2.5rem;
         line-height: 1.5;
-        margin:32px 0;
-        padding-bottom:0;
+        margin: 32px 0;
+        padding-bottom: 0;
     }
+
     .section-header .section-subtitle {
         margin-bottom: 2rem;
     }
+
     .section-header button {
         background-color: #9A9A9A;
     }
+
     .content-text.cards {
-        width:100%;
-        padding:0;
+        width: 100%;
+        padding: 0;
     }
+
     .cards .card {
-        flex-direction:column;
+        flex-direction: column;
     }
-    .cards .card .card-image {
-        width:100%;
-    }
+
+        .cards .card.selected {
+            background-color: #F2F5F5;
+        }
+        .cards .card .card-image {
+            width: 100%;
+        }
+
     .card .card-info {
         padding: 32px 16px;
+    }
+
+    .landing-page {
+        background-color: #F2F5F5;
+    }
+    .one-third {
+        flex-basis: 100%;
+        background-color: #D7D7D7;
+        margin: 0 1rem .5rem;
+    }
+    .one-third .feature-info {
+        margin-bottom: 0;
+    }
+    .one-third .feature-image,
+    .one-third .feature-info h3,
+    .one-third .feature-info p 
+    {
+        display:none;
+    }
+    .one-third .feature-info h2  {
     }
 }
